2020-03-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.c,
	  support/regression/tests/bug-2817.c,
	  support/regression/tests/bug-2973.c:
	  Fix bugs #2817 and #2973, patches by Thomas.

2020-03-12 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* device/lib/hc08/Makefile.in,
	* device/lib/s08/Makefile.in: add atomic_flag_clear.c

2020-03-09 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/stdatomic.h,
	  device/lib/atomic_flag_clear.c,
	  device/lib/*/atomic_flag_test_and_set.s,
	  device/lib/*/Makfeile.in,
	  support/regression/tests/atomic.c:
	  Basic atomic_flag support.

2020-03-06 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c,
	  support/regression/tests/bug-2982.c:
	  Fix bug #2982.
	* src/z80/gen.c:
	  Improve code generation for 16-bit addition with literal.

2020-03-02 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/mcs51/gen.c,
	* src/ds390/gen.c: fixed bug #2980

2020-02-13 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/z80/peeph-z80.def,
	  src/z80/peeph-r2k.def:
	  Improve flexibility of some peephole rules.

2020-02-13 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/z80/peeph-z80.def:
	  Additional z80 peephole rules picked from patch #314 by b-s-a.

2020-02-12 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCopt.c,
	  src/z80/gen.c:
	  Allow non-literal third argument for ldir-memcpy().

2020-02-12 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/z80/gen.c:
	  Use macros for immediate data to improve assembler portability, patch #315 by b-s-a.

2020-02-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-gbz80.def:
	  Fix bug #2974.

2020-01-23 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/linksrc/Makefile.in:
	  Fix bug #2969.

2020-01-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix bug #2967.

2020-01-19 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx: